# AML-Tetris-Reinforcement-Learning

./: .gitignore  LICENSE  README.md  config.py  evaluate.py  helper.py  main.py  pyproject.toml  requirements.txt  test.py  test_config.py  test_gif_creator.py  train.py  train_dqn_reinforce.py  train_evolutionary.py  train_onpolicy.py
agents/: __init__.py  a2c_agent.py  base_agent.py  dqn_agent.py  es_agent.py  genetic_agent.py  original_dqn_agent.py  ppo_agent.py  random_agent.py  reinforce_agent.py
models/: a2c_score_3475.pth  a2c_score_40.pth  a2c_score_6131.pth  a2c_score_62.pth  a2c_tetris.pth  dqn_score_1208774.pth  dqn_score_1428461.pth  dqn_score_21488.pth  dqn_score_442.pth  dqn_score_47160.pth  dqn_tetris.pth  dqn_tetris_original_impl.pth  es_tetris.pth  evaluation_summary_tetris.csv  evaluation_summary_tetris_1.csv  evaluation_summary_tetris_2.csv  evaluation_summary_tetris_3.csv  ga_best_tetris.pth  ppo-actor_score_108537.pth  ppo-actor_score_24.pth  ppo-actor_score_45.pth  ppo-actor_score_9137.pth  ppo-critic_score_108537.pth  ppo-critic_score_24.pth  ppo-critic_score_45.pth  ppo-critic_score_9137.pth  ppo_actor_tetris.pth  ppo_critic_tetris.pth  reinforce_score_122838.pth  reinforce_score_324.pth  reinforce_score_3447.pth  reinforce_tetris.pth  tetris  tetris_1000  tetris_2000
src/: präsi_tetris.py  tetris.py
